BUG#21357: Valgrind error in partition test memcpy was too long m_reorged_parts was already temp_partitions * no_subparts so multiplying by no_subparts again was not a good idea.